# MatrixMultiplication_Threads

./: .gitignore  CMakeLists.txt  FileIO.c  README.md  a.out  howToCompile  main.c  matrix.c  matrix.h  test.txt  test2.txt  test3.txt
